# routes/api/user.php
@@ -1,0 +1,10 @@
+<?php
+
+use App\Http\Controllers\Api\UserController;
+use Illuminate\Support\Facades\Route;
+
+Route::controller(UserController::class)
+    ->middleware('auth:sanctum')
+    ->prefix('/user')->group(function() {
+        Route::get('/{id}', [UserController::class, 'show']);
+    });
